[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/Idle1.png" type="Texture" id=2]
[ext_resource path="res://assets/player/Idle2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/Run1.png" type="Texture" id=4]
[ext_resource path="res://assets/player/Run2.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/walk.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/jump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/player/ThrowGuide.png" type="Texture" id=8]
[ext_resource path="res://assets/audio/packetHit.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 20 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 2
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Jump"
offset = Vector2( 0, 0.5 )

[node name="ThrowGuide" type="Sprite" parent="."]
visible = false
position = Vector2( 80, -33 )
texture = ExtResource( 8 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="PickupArea" type="Area2D" parent="."]

[node name="PickupCollision" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 3 )

[node name="PacketPoint" type="Node2D" parent="."]
position = Vector2( 0, -23 )

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Interact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_PickupArea_body_exited"]
